--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
           <div class="btnmenu">
             <span></span>
           </div>
-          <a href="" class="icon-search"><i class="bi bi-search"></i></a>
           <a href="" class="icon-location"><i class="bi bi-geo-alt"></i></a>
           <div class="contact">
             <a href=""><i class="bi bi-telephone"></i></a>
@@ -63,10 +62,7 @@
         </ul>
       </div>
     </header>
-    <div class="search">
-      <input class="search__input" />
-      <div class="search__right"></div>
-    </div>
+
     <nav class="nav">
       <ul class="nav__top">
         <li><a href="">Jewelry</a></li>
@@ -187,7 +183,7 @@
             Our short film for Mother’s Day captures the infinite facets of love
             in mother and daughter relationships.
           </p>
-          <button class="btn__shop --second">Shop Now</button>
+          <a href="/shop.html" class="btn__shop --second">Shop Now</a>
         </div>
         <div class="celeb__video">
           <video
@@ -320,6 +316,13 @@
           </div>
         </div>
       </section>
+      <button class="backToTop">
+        <svg class="svgIcon" viewBox="0 0 384 512">
+          <path
+            d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+          ></path>
+        </svg>
+      </button>
     </main>
     <footer class="footer">
       <div class="footer__left">
