--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,6 @@
           <div class="btnmenu">
             <span></span>
           </div>
-          <a href="" class="icon-search"><i class="bi bi-search"></i></a>
           <a href="" class="icon-location"><i class="bi bi-geo-alt"></i></a>
           <div class="contact">
             <a href=""><i class="bi bi-telephone"></i></a>
@@ -91,7 +90,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -99,7 +119,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -107,7 +148,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -115,7 +177,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -123,7 +206,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -131,7 +235,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -139,7 +264,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -147,7 +293,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="shop__list--item">
               <a href="" class="item-imge"
@@ -155,7 +322,28 @@
               /></a>
               <p class="item-title">Necklaces & Pendants</p>
               <p class="item-price">35$</p>
-              <a href="" class="item-buy">Buy now</a>
+              <div class="item-center">
+                <a href="" class="item-buy">Buy now</a>
+                <div class="button" data-tooltip="PRICE 35$">
+                  <div class="button-wrapper">
+                    <div class="text">Add To Cart</div>
+                    <span class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-cart2"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"
+                        ></path>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
